--- a/frontend/html/style/style.css
+++ b/frontend/html/style/style.css
@@ -20,3 +20,16 @@
 /*@fontface here*/
 
 /*begin main css*/
+body {
+	background: #fffff6 url('images/bg.png');
+	fon-family: arial, sans-serif;
+}
+div#wrap {
+	margin: 0 auto;
+	width:1000px;
+}
+#header h1 {
+	font-family: Rockwell;
+	font-size: 40px;
+	text-shadow: #fffff6 0 0 1px;
+}
