--- a/frontend/html/style/style.css
+++ b/frontend/html/style/style.css
@@ -24,11 +24,13 @@
 	body {
 		background: #fffff6 url('images/bg.png');
 		font-family: arial, sans-serif;
+		min-height:100%;
 	}
 /*layout*/
 	div#wrap {
 		margin: 0 auto;
 		width:1000px;
+		min-height:100%;
 	}
 	div#header {
 		margin: 20px 0 30px 0;
@@ -36,29 +38,53 @@
 	div#main_content_lhs, div#main_content_mid, div#main_content_rhs {
 		background-color:#FFFFFF;
 		border:#c7c7c7 solid 1px;
-		-webkit-border-radius: 10px;
-		-moz-border-radius: 10px;
-		border-radius: 10px;
-		height:100%;
+		-webkit-border-radius: 5px;
+		-moz-border-radius: 5px;
+		border-radius: 5px;
+		min-height:100%;
 		overflow:hidden;
+		padding:5px;
 	}
 	div#main_content_lhs {
-		width:230px;
+		width:210px;
 		float:left;
+		margin:0 10px 0 0;
 	}
 	div#main_content_mid {
-		width:500px;
+		width:520px;
 		float:left;
 	}
 	div#main_content_rhs {
-		width:230px;
+		width:210px;
 		float:left;
+		margin:0 0 0 10px;
 	}
 /*header*/
 	#header h1 {
 		font-family: Rockwell;
 		font-size: 40px;
 		text-shadow: #fffff6 0 0 1px;
+	}
+/*left column*/
+	ul#nav{
+		margin:10px 0 0 0;
+	}
+	#nav p, #nav img {
+		display:inline;
+	}
+	#nav li{
+		height:32px;
+		border-bottom:1px solid #EEEEE6;
+		margin:0 0 15px 0;
+	}
+	#nav img {
+		float:right;
+		margin:0 5px 0 0;
+	}
+	#nav p{
+		height:32px;
+		font-size:17px;
+		color:#4a4a4a;
 	}
 /*middle column*/
 	#report_list li {
@@ -73,4 +99,8 @@
 	}
 	div.report_list_controls {
 		float:right;
+	}
+	#report_list p{
+		font-size: 14px;
+		color:#5e5e5e;
 	}
