--- a/frontend/html/style/style.css
+++ b/frontend/html/style/style.css
@@ -24,7 +24,7 @@
 	body {
 		background: #fffff6 url('images/bg.png');
 		font-family: arial, sans-serif;
-		min-height:100%;
+		height:100%;
 	}
 /*layout*/
 	div#wrap {
@@ -33,7 +33,10 @@
 		min-height:100%;
 	}
 	div#header {
-		margin: 20px 0 30px 0;
+		margin: 15px 0 20px 0;
+	}
+	div#main_content{
+		/**/
 	}
 	div#main_content_lhs, div#main_content_mid, div#main_content_rhs {
 		background-color:#FFFFFF;
@@ -41,8 +44,8 @@
 		-webkit-border-radius: 5px;
 		-moz-border-radius: 5px;
 		border-radius: 5px;
-		min-height:100%;
-		overflow:hidden;
+		height:100%;
+		overflow:auto;
 		padding:5px;
 	}
 	div#main_content_lhs {
@@ -64,10 +67,12 @@
 		font-family: Rockwell;
 		font-size: 40px;
 		text-shadow: #fffff6 0 0 1px;
+		color:#393939;
+		font-weight:normal;
 	}
 /*left column*/
 	ul#nav{
-		margin:10px 0 0 0;
+		/*margin:10px 0 0 0;*/
 	}
 	#nav p, #nav img {
 		display:inline;
@@ -75,20 +80,40 @@
 	#nav li{
 		height:32px;
 		border-bottom:1px solid #EEEEE6;
-		margin:0 0 15px 0;
+		padding:15px 5px 5px 5px;
+	}
+	#nav li:hover{
+		background-color:#f9f9f0;
 	}
 	#nav img {
 		float:right;
-		margin:0 5px 0 0;
+		margin:-7px 5px 0 0;
 	}
 	#nav p{
 		height:32px;
-		font-size:17px;
+		font-size:15px;
+		color:#4a4a4a;
+	}
+	#nav a{
+		text-decoration:none;
 		color:#4a4a4a;
 	}
 /*middle column*/
+	ul#report_list {
+		margin: 5px 0 0 0;
+	}
+	#report_list a{
+		text-decoration:none;
+		color:#5e5e5e;
+	}
 	#report_list li {
-		height:40px;
+		/*height:20px;*/
+		border-bottom:1px solid #EEEEE6;
+		padding:10px 10px 13px 10px;
+	}
+	#report_list li:hover{
+		background-color:#f9f9f0;
+		text-decoration:underline;
 	}
 	#report_list img {
 		width:20px;
@@ -99,8 +124,76 @@
 	}
 	div.report_list_controls {
 		float:right;
+		opacity:0.5;
+		text-decoration:none;
+	}
+	div.report_list_controls:hover{
+		opacity:0.7;
+	}
+	.report_list_controls img {
+		margin:-2px 0 0 0;
 	}
 	#report_list p{
-		font-size: 14px;
+		font-size: 12px;
 		color:#5e5e5e;
+	}
+	p.street{
+	}
+	p.suburb{
+		/*css to make the suburb in its' own column goes here*/
+	}
+/*right hand side*/
+	#main_content_rhs h2 {
+		font-size:14px;
+		color:#5e5e5e;
+		line-height:10px;
+		margin:10px 0 0 0;
+		text-align:center;
+	}
+	#main_content_rhs hr {
+		color:#EEEEE6;
+		background-color:#EEEEE6;
+		width:200px;
+		height:1px;
+		border:none;
+		margin:20px 0;
+	}
+	#main_content_rhs img {
+		border:#efefef solid 1px;
+		margin:0 25px;
+		width:150px;
+	}
+	p.report_metainfo{
+		font-size:11px;
+		line-height:18px;
+		color:#5e5e5e;
+		margin:0 0 0 3px;
+	}
+	#main_content_rhs h3{
+		font-size:15px;
+		color:#5e5e5e;
+	}
+	ul#report_contents{
+		margin:10px 0 0 0;
+		list-style-type:disc;
+	}
+	#report_contents li{
+		line-height:16px;
+		color:#5e5e5e;
+		list-style:disc;
+		margin:0 0 0 20px;
+		font-size:13px;
+		padding:0 0 5px 0;
+	}
+/*footer*/
+	#footer p, #footer a{
+		color:#b8b8b8;
+		font-size:14px;
+		text-decoration:none;
+	}
+	#footer a:hover{
+		text-decoration:underline;
+	}
+	div#footer{
+		margin:20px 0 20px;
 	}
