--- a/frontend/html/style/style.css
+++ b/frontend/html/style/style.css
@@ -224,6 +224,37 @@
 			text-align:center;
 			margin: 0 0 10px 0;
 		}
+		div.form_fields{
+			margin:0 0 30px 0;
+		}
+		.form_fields label, .form-fields input{
+			display:block;
+			margin:10px 0 3px 0;
+		}
+		.form_fields label{
+			font-size:12px;
+		}
+		.form_fields input{
+			width:100%;
+			font-family:arial;
+			font-size:14px;
+			line-height:18px;
+			color:#666;
+		}
+		.form_fields textarea{
+			width:100%;
+			height:150px;
+			font-family:arial;
+			font-size:14px;
+			line-height:18px;
+			color:#666;
+		}
+		.form_fields textarea:focus, .form_fields input:focus{
+			color:#000;
+		}
+		#main_content_rhs_wide .form_fields hr{
+			margin:25px 0 25px 0;
+		}
 	/*Typography*/
 		#main_content_rhs_wide h2{
 			color:#4a4a4a;
