--- a/frontend/html/style/style.css
+++ b/frontend/html/style/style.css
@@ -1,6 +1,6 @@
 /*Main css file for the pdf report generator*/
 /*Reset*/
-	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {margin: 0;padding: 0;border: 0;outline: 0;font-size: 100%;vertical-align: baseline;background: transparent;}
+	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, textarea {margin: 0;padding: 0;border: 0;outline: 0;font-size: 100%;vertical-align: baseline;background: transparent;}
 	body {line-height: 1;}
 	ol, ul, li {list-style: none;}
 	blockquote, q {quotes: none;}
@@ -234,20 +234,15 @@
 		.form_fields label{
 			font-size:12px;
 		}
-		.form_fields input{
-			width:100%;
+		.form_fields input, textarea, select{
+			width:700px;
 			font-family:arial;
 			font-size:14px;
 			line-height:18px;
 			color:#666;
 		}
 		.form_fields textarea{
-			width:100%;
 			height:150px;
-			font-family:arial;
-			font-size:14px;
-			line-height:18px;
-			color:#666;
 		}
 		.form_fields textarea:focus, .form_fields input:focus{
 			color:#000;
@@ -314,11 +309,31 @@
 			width:120px;
 			margin:0 15px 10px 0;
 		}
-		.list_add_new a{
+		.list_add_new a, #main_content_rhs_wide a.summ_rec_button{
 			color:#666;
 			font-size:13px;
 			text-decoration:none;
 		}
-		.list_add_new a:hover{
+		.list_add_new a:hover, #main_content_rhs_wide a.summ_rec_button:hover{
 			text-decoration:underline;
+		}
+		#main_content_rhs_wide a.summ_rec_button{
+			float:right;
+			margin:5px 20px 0 0;
+		}
+		tbody#summ_rec_current_items_table{
+			margin:10px 0 0 0;
+			display:block;
+		}
+		#summ_rec_current_items_table tr{
+			display:block;
+			margin:0 0 15px 0;
+			padding:0 0 8px 0;
+			border-bottom:1px solid #aaaaaa;
+		}
+		#summ_rec_current_items_table h4{
+			color:#575757;
+		}
+		#summ_rec_current_items_table p{
+			color:#666666;
 		}
