--- a/frontend/html/style/style.css
+++ b/frontend/html/style/style.css
@@ -339,3 +339,48 @@
 		#summ_rec_current_items_table p{
 			color:#666666;
 		}
+	/*login page*/
+		div#wrap_login{
+			width:470px;
+			margin:100px auto 0 auto;
+		}
+		#wrap_login p, #wrap_login h1{
+			text-align:center;
+		}
+		div#login_area{
+			background-color:#FFFFFF;
+			border:1px solid #c7c7c7;
+			-webkit-border-radius: 5px;
+			-moz-border-radius: 5px;
+			border-radius: 5px;
+			padding:15px;
+		}
+		#login_area label, #login_area input{
+			display:block;
+		}
+		#login_area label{
+			font-size:14px;
+			margin:0 0 3px 0;
+		}
+		#login_area input{
+			width:100%;
+			height:30px;
+			font-size:20px;
+		}
+		input#submit{
+			margin:5px -5px 0 0;
+			width:100px;
+			float:right;
+			-webkit-border-radius: 3px;
+			-moz-border-radius: 3px;
+			border-radius: 3px;
+			border:#EEEEE6 solid 1px;
+			color:#898989;
+			background-color:#FFFFFF;
+		}
+		input#submit:hover{
+			border:#898989 solid 1px;
+			color:#FFFFFF;
+			background-color:#898989;
+			cursor:pointer;
+		}
