--- a/frontend/html/style/style.css
+++ b/frontend/html/style/style.css
@@ -361,20 +361,21 @@
 		#login_area label{
 			font-size:14px;
 			margin:0 0 3px 0;
+			color:#1f1f1f;
 		}
 		#login_area input{
 			width:100%;
 			height:30px;
 			font-size:20px;
-		}
-		input#submit{
-			margin:5px -5px 0 0;
-			width:100px;
-			float:right;
+			border:1px solid #dcdcdc;
 			-webkit-border-radius: 3px;
 			-moz-border-radius: 3px;
 			border-radius: 3px;
-			border:#EEEEE6 solid 1px;
+		}
+		input#submit{
+			margin:5px 0px 0 0;
+			width:100px;
+			float:right;
 			color:#898989;
 			background-color:#FFFFFF;
 		}
