--- a/app/style/style.css
+++ b/app/style/style.css
@@ -77,6 +77,13 @@
 		color:#393939;
 		font-weight:normal;
 	}
+	#header h1 a {
+		color:#393939;
+		text-decoration:none;
+	}
+	#header h1 a:hover {
+	    color:#595959;
+	}
 /*footer*/
 	#footer p, #footer a{
 		color:#b8b8b8;
