--- a/frontend/html/style/style.css
+++ b/frontend/html/style/style.css
@@ -1,6 +1,6 @@
 /*Main css file for the pdf report generator*/
 /*Reset*/
-	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, textarea {margin: 0;padding: 0;border: 0;outline: 0;font-size: 100%;vertical-align: baseline;background: transparent;}
+	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, textarea, input {margin: 0;padding: 0;border: 0;outline: 0;font-size: 100%;vertical-align: baseline;background: transparent;}
 	body {line-height: 1;}
 	ol, ul, li {list-style: none;}
 	blockquote, q {quotes: none;}
@@ -29,7 +29,7 @@
 /*layout*/
 	div#wrap {
 		margin: 0 auto;
-		width:1000px;
+		width:1010px;
 		min-height:100%;
 	}
 	div#header {
@@ -47,6 +47,9 @@
 		height:100%;
 		padding:5px;
 	}
+	div.col, div#main_content_rhs_wide{
+		overflow:auto;
+	}
 	div#main_content_lhs {
 		width:210px;
 		float:left;
@@ -57,7 +60,7 @@
 		float:left;
 	}
 	div#main_content_rhs {
-		width:210px;
+		width:220px;
 		float:left;
 		margin:0 0 0 10px;
 	}
@@ -74,6 +77,13 @@
 		color:#393939;
 		font-weight:normal;
 	}
+	#header h1 a {
+		color:#393939;
+		text-decoration:none;
+	}
+	#header h1 a:hover {
+	    color:#595959;
+	}
 /*footer*/
 	#footer p, #footer a{
 		color:#b8b8b8;
@@ -84,7 +94,8 @@
 		text-decoration:underline;
 	}
 	div#footer{
-		margin:20px 0 20px;
+		clear:both;
+		padding:10px 0 10px 0;
 	}
 /*left column*/
 	ul#nav{
@@ -246,12 +257,17 @@
 		}
 		.form_fields textarea:focus, .form_fields input:focus{
 			color:#000;
+			outline:#a1a1a1 solid 2px;
 		}
 		#main_content_rhs_wide .form_fields hr{
 			margin:25px 0 25px 0;
 		}
 		#main_content_rhs_wide .form_fields input, #main_content_rhs_wide .form_fields textarea{
 			border:1px solid #BABABA;
+			margin:0 0 5px 0;
+		}
+		#main_content_rhs_wide .form_fields input[type="file"]{
+			border:none;
 		}
 	/*Typography*/
 		#main_content_rhs_wide h2{
@@ -282,16 +298,18 @@
 			float:right;
 			margin:30px 5px 10px 0;
 		}
-		#report_edit_back_forward a{
+		#report_edit_back_forward input{
 			border:#EEEEE6 solid 1px;
-			color:#898989;
+			background-color:#dddddd;
+			color:#666666;
 			padding:5px;
+			font-size:16px;
 			text-decoration:none;
 			-webkit-border-radius: 3px;
 			-moz-border-radius: 3px;
 			border-radius: 3px;
 		}
-		#report_edit_back_forward a:hover{
+		#report_edit_back_forward input:hover{
 			border:#898989 solid 1px;
 			color:#FFFFFF;
 			background-color:#898989;
