--- a/frontend/html/style/style.css
+++ b/frontend/html/style/style.css
@@ -278,7 +278,7 @@
 			display:inline;
 		}
 		#main_content_rhs_wide h3{
-			color:#898989;
+			color:#565656;
 			font-weight:normal;
 			font-size:18px;
 			display:inline;
@@ -334,6 +334,9 @@
 			font-size:13px;
 			text-decoration:none;
 		}
+		#wrap a.summ_rec_button.cancel{
+			color:#f22;
+		}
 		.list_add_new a:hover, #main_content_rhs_wide a.summ_rec_button:hover{
 			text-decoration:underline;
 		}
@@ -357,49 +360,96 @@
 		#summ_rec_current_items_table p{
 			color:#666666;
 		}
-	/*login page*/
-		div#wrap_login{
-			width:470px;
-			margin:100px auto 0 auto;
-		}
-		#wrap_login p, #wrap_login h1{
-			text-align:center;
-		}
-		div#login_area{
-			background-color:#FFFFFF;
-			border:1px solid #c7c7c7;
-			-webkit-border-radius: 5px;
-			-moz-border-radius: 5px;
-			border-radius: 5px;
-			padding:15px;
-		}
-		#login_area label, #login_area input{
-			display:block;
-		}
-		#login_area label{
-			font-size:14px;
-			margin:0 0 3px 0;
-			color:#1f1f1f;
-		}
-		#login_area input{
-			width:100%;
-			height:30px;
-			font-size:20px;
-			border:1px solid #dcdcdc;
-			-webkit-border-radius: 3px;
-			-moz-border-radius: 3px;
-			border-radius: 3px;
-		}
-		input#submit{
-			margin:5px 0px 0 0;
-			width:100px;
-			float:right;
-			color:#898989;
-			background-color:#FFFFFF;
-		}
-		input#submit:hover{
-			border:#898989 solid 1px;
-			color:#FFFFFF;
-			background-color:#898989;
-			cursor:pointer;
-		}
+/*login page*/
+	div#wrap_login{
+		width:470px;
+		margin:100px auto 0 auto;
+	}
+	#wrap_login p, #wrap_login h1{
+		text-align:center;
+	}
+	div#login_area{
+		background-color:#FFFFFF;
+		border:1px solid #c7c7c7;
+		-webkit-border-radius: 5px;
+		-moz-border-radius: 5px;
+		border-radius: 5px;
+		padding:15px;
+	}
+	#login_area label, #login_area input{
+		display:block;
+	}
+	#login_area label{
+		font-size:14px;
+		margin:0 0 3px 0;
+		color:#1f1f1f;
+	}
+	#login_area input{
+		width:100%;
+		height:30px;
+		font-size:20px;
+		border:1px solid #dcdcdc;
+		-webkit-border-radius: 3px;
+		-moz-border-radius: 3px;
+		border-radius: 3px;
+	}
+	input#submit{
+		margin:5px 0px 0 0;
+		width:100px;
+		float:right;
+		color:#898989;
+		background-color:#FFFFFF;
+	}
+	input#submit:hover{
+		border:#898989 solid 1px;
+		color:#FFFFFF;
+		background-color:#898989;
+		cursor:pointer;
+	}
+/*Settings*/
+		/*Recommendations*/
+			/*borders*/
+			#settings_rec_table tr{
+				border-top:1px solid #d5d5d5;
+			}
+			#settings_rec_table tbody>tr:first-child{
+				border-top:none;
+				border-bottom:1px solid #b3b3b3;
+			}
+			#settings_rec_table td{
+				border-left:1px solid #d5d5d5;
+			}
+			#settings_rec_table tr>td:first-child{
+				border:none;
+			}
+			#settings_rec_table td{
+				padding:10px 5px;
+				color:#676767;
+			}
+			/*set col widths*/
+			#settings_rec_table td.id{
+				width:20px;
+			}
+			#settings_rec_table td.name{
+				width:100px;
+			}
+			#settings_rec_table td.desc{
+				width:400px;
+			}
+			#settings_rec_table td.price{
+				width:40px;
+			}
+			/*edit / delete links*/
+			#settings_rec_table td:nth-child(5)>a, #settings_rec_table td:nth-child(6)>a{
+			font-size:13px;
+			text-decoration:none;
+			}
+			#settings_rec_table td:nth-child(5)>a{
+				color:#666;
+			}
+			#settings_rec_table td:nth-child(6)>a{
+				color:#F22;
+			}
+			#settings_rec_table td:nth-child(5)>a:hover, #settings_rec_table td:nth-child(6)>a:hover{
+				text-decoration:underline;
+			}
